[package]
name = "penumbra-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
winreg = "0.52"
anyhow = "*"
path-absolutize = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "1"
native-dialog = "*"
whoami = "*"
[build-dependencies]
windres = "*"
