[package]
name = "penumbra-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.build-dependencies]
windres = "*"
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
[target.'cfg(unix)'.dependencies]
include_dir = "0.7.4"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "*"
path-absolutize = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "1"
whoami = "*"
xdialog = "2.1.0"
directories = "6.0.0"
